<resources>
    <string name="app_name">Live Streaming Camera</string>
    <string name="denied">Denied</string>
    <string name="accept">Accept</string>
    <string name="menu_button_desc">選單</string>
    <!-- strings.xml 補充 -->
    <string name="rtmp_source_key">rtmp_source</string>
    <string name="rtmp_source_category_title">RTMP 源</string>
    <string name="rtmp_source_url_key">rtmp_url</string>
    <string name="rtmp_source_title">伺服器 URL</string>
    <string name="rtmp_source_default_url">rtmp://your-server.com/live/stream</string>
    <string name="rtmp_source_restart_on_disconnect_key">restart_on_disconnect</string>
    <string name="rtmp_source_restart_on_disconnect_title">斷線重連</string>
    <string name="rtmp_source_restart_on_disconnect_summary">斷開後自動重新連線</string>
    <string name="video">影像</string>
    <string name="video_settings_key">video_settings</string>
    <string name="settings">設定</string>
    <string name="video_encoder_key">video_encoder</string>
    <string name="video_encoder">影像編碼器</string>
    <string name="default_video_encoder">OMX.google.h264.encoder</string>
    <string name="video_resolution_key">video_resolution</string>
    <string name="video_resolution">解析度</string>
    <string name="default_video_resolution">1280x720</string>
    <string name="video_fps_key">video_fps</string>
    <string name="video_fps">影格率</string>
    <string name="default_fps">25</string>
    <string name="video_bitrate_key">video_bitrate</string>
    <string name="video_bitrate">直播輸出影像位元率 (kbps)</string>
    <string name="default_video_bitrate">2000</string>
    <string name="video_profile_key">video_profile</string>
    <string name="video_profile">編碼檔次</string>
    <string name="video_level_key">video_level</string>
    <string name="video_level">編碼級別</string>
    <string name="audio">音訊</string>
    <string name="audio_enable_key">audio_enable</string>
    <string name="audio_enable">啟用音訊</string>
    <string name="audio_settings_key">audio_settings</string>
    <string name="audio_encoder">音訊編碼器</string>
    <string name="default_audio_encoder">AAC</string>
    <string name="audio_channel_config_key">audio_channel_config</string>
    <string name="audio_number_of_channels">聲道數</string>
    <string name="audio_bitrate_key">audio_bitrate</string>
    <string name="audio_bitrate">音訊位元率 (bps)</string>
    <string name="audio_sample_rate_key">audio_sample_rate</string>
    <string name="audio_sample_rate">取樣率</string>
    <string name="audio_byte_format">位元格式</string>
    <string name="audio_profile">音訊檔次</string>
    <string name="audio_source_type_key">audio_source_type</string>
    <string name="audio_source_type">音訊來源類型</string>
    <string name="endpoint">推流端點</string>
    <string name="endpoint_type">端點類型</string>
    <string name="srt_server_key">srt_server</string>
    <string name="srt_server">SRT 伺服器</string>
    <string name="default_srt_server_url">srt://your-server.com</string>
    <string name="srt_server_ip_key">srt_server_ip</string>
    <string name="server_ip">伺服器 IP</string>
    <string name="srt_server_port_key">srt_server_port</string>
    <string name="server_port">連接埠</string>
    <string name="default_srt_server_port">9998</string>
    <string name="srt_server_stream_id_key">srt_stream_id</string>
    <string name="srt_server_stream_id">流 ID (streamid)</string>
    <string name="default_srt_server_stream_id">#!::u=user,p=pass</string>
    <string name="srt_server_latency_key">srt_latency</string>
    <string name="srt_server_latency">延遲 (ms)</string>
    <string name="default_srt_server_latency">1000</string>
    <string name="settings_title">設定</string>
    <string name="audio_encoder_key">audio_encoder</string>
    <string name="audio_byte_format_key">audio_byte_format</string>
    <string name="audio_profile_key">audio_profile</string>
    <string name="audio_encoder_title">音訊編碼器 (OPUS只能用在SRT直播)</string>
    <string name="audio_byte_format_title">位元格式</string>
    <string name="audio_profile_title">音訊檔次</string>
    <string name="audio_profile_category">編碼檔次</string>
    <string name="switch_camera_desc">切換鏡頭</string>
    <string name="srt_server_passphrase_key">srt_passphrase</string>
    <string name="srt_server_passphrase">密碼 (passphrase)</string>
    <string name="default_srt_server_passphrase">密碼</string>
    <string name="srt_server_enable_bitrate_regulation_key">enable_bitrate_regulation</string>
    <string name="srt_server_enable_bitrate_regulation">啟用碼率調節</string>
    <string name="srt_server_video_target_bitrate_key">video_target_bitrate</string>
    <string name="srt_server_video_target_bitrate">視訊目標碼率 (kbps)</string>
    <string name="srt_server_video_min_bitrate_key">video_min_bitrate</string>
    <string name="srt_server_video_min_bitrate">視訊最小碼率 (kbps)</string>
    <string name="srt_server_moblin_regulator_mode_key">moblin_regulator_mode</string>
    <string name="srt_server_moblin_regulator_mode">調節模式</string>
    <string name="srt_server_moblin_regulator_mode_value_belabox">belabox</string>
    <string name="rtmp_server">RTMP 伺服器</string>
    <string name="server_url">伺服器 URL</string>
    <string name="srt_full_url_title">SRT 完整 URL</string>
    <string name="rtmp_server_key">rtmp_server</string>
    <string name="rtmp_server_url_key">rtmp_server_url_key</string>
    <string name="endpoint_type_key">endpoint_type_key</string>
    <string name="default_rtmp_url">rtmp://your-server.com/live/stream</string>
    <string name="file_endpoint_key">file_endpoint</string>
    <string name="file">檔案</string>
    <string name="file_name_key">recording_storage_location</string>
    <string name="recording_start">開始錄影</string>
    <string name="recording_stop">停止錄影</string>
    <string name="file_name">檔案名稱</string>
    <string name="default_file_name">record.mp4</string>
    <string name="menu_twitch_channel">Twitch 頻道設定</string>
    <string name="twitch_channel_dialog_title">輸入 Twitch 頻道名稱</string>
    <string name="twitch_channel_dialog_hint">頻道名稱</string>
    <string name="twitch_channel_dialog_ok">確定</string>
    <string name="twitch_channel_dialog_cancel">取消</string>
    <string name="chat_switch_text">顯示聊天</string>
    <string name="chat_switch_desc">聊天開關</string>
    <string name="flash_desc">閃光燈</string>
    <string name="white_balance_desc">白平衡</string>
    <string name="exposure_desc">曝光</string>
    <string name="focus_desc">對焦</string>
    <string name="mute_desc">靜音</string>
    <string name="black_screen_desc">全黑畫面</string>
    <string name="rtmp">RTMP</string>
    <string name="srt">SRT</string>
    <string name="offline">離線</string>
    <string name="connecting">連線中</string>
    <string name="streaming">直播中</string>
    <string name="status_format">%s %s</string>
    <string name="chat_room_settings_title">聊天室設定</string>
    <string name="live_button_desc">直播</string>
    <string name="srt_full_url_2_title">SRT 完整 URL 2</string>
    <string name="rtmp_full_url_2_title">RTMP 完整 URL 2</string>
    <string name="viewer_count_default">0</string>
    <string name="viewer_icon_desc">觀看人數圖示</string>
    <string name="uptime_default">00:00:00</string>
    <string name="video_encoder_title">影像編碼器</string>
    <string name="snapshot">拍照</string>
    <string name="grayscale_desc">黑白濾鏡</string>
    <string name="beauty_desc">美顏</string>
    <string name="blur_desc">模糊</string>
    <string name="mosaic_desc">馬賽克</string>
    <string name="sepia_desc">復古</string>
    <string name="effects_desc">特效</string>

    <!-- PiP Settings -->
    <string name="menu_pip_settings">PiP 設定　　　</string>
    <string name="pip_settings_title">PiP (畫中畫)設定</string>
    <string name="enable_pip">啟用 PiP</string>
    <string name="pip_position">位置 (3x4 網格)</string>
    <string name="pip_padding">邊界留空 (像素)</string>
    <string name="pip_rounded_corners">圓角</string>

</resources>
